--- a/README.Rmd
+++ b/README.Rmd
@@ -16,11 +16,12 @@ knitr::opts_chunk$set(
 # piecenorm
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![CRAN status](https://www.r-pkg.org/badges/version/piecenorm)](https://CRAN.R-project.org/package=piecenorm)
+
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental) [![CRAN status](https://www.r-pkg.org/badges/version/piecenorm)](https://CRAN.R-project.org/package=piecenorm)
+
 <!-- badges: end -->
 
-The goal of piecenorm is to ...
+The goal of piecenorms is to provide implementation of piecewise normalisation techniques useful when dealing with the communication of skewed and highly skewed data.
 
 ## Installation
 
@@ -33,25 +34,46 @@ devtools::install_github("david-hammond/piecenorm")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to solve a common normalisation problem. There are many mathematical trnsformations that can be made on skewed data. However, these can be a barrier when communicating to a non-technical audience. `piecenorms` allows the use to:
+
+1.  Provide a set of observations `obs`
+
+2.  Select a set of class breaks, either through using the `classInt` (or other similar) packages, or by selecting the manually based on expert judgement and ease of communication purposes.
+
+3.  Calculate a normalisation of between 0 and 1 for the values within the observations based on the class intervals.
+
+Example R Code can be found below.
 
 ```{r example}
-library(piecenorm)
-## basic example code
+library(piecenorms)
+x <- round(exp(1:10),2)
+brks <- c(min(x), 8, 20, 100, 1000, 25000)
+y <- piecenorm(x, brks)
+plot(x, y, type = 'l',
+     xlab = "Original Values",
+     ylab = "Normalised Values")
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+For any call to `piecenorm`, the user provides a vector of observations, a vector of breaks and a direction for the normalisation. The data is then cut into classes and normalised within its class.
 
-```{r cars}
-summary(cars)
-```
+**Number of Bins:**
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
+$$\begin{equation}{ n = \text{length}(\text{brks}) - 1}\end{equation}$$
 
-You can also embed plots, for example:
+**Normalisation Class Intervals:**
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
+$$\begin{equation}{\left(\frac{i-1}{n}, \frac{i}{n}\right] \forall i \in \{1:n\}}\end{equation}$$
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+In cases where there is only one bin defined as `c(min(obs), max(obs))`, the function `piecenorm` resolves to standard minmax normalisation.
+
+## Notes
+
+As with any non-linear transformation, **piecewise normalization** preserves **ordinal invariance** within each class but does not preserve **global relative magnitudes**. However, it does maintain **relative magnitudes within each class**. On the other hand, more standard techniques like **min-max normalization** preserves both **ordinal invariance** and **global relative magnitudes**.
+
+Definitions of each are as follows:
+
+-   **Ordinal Invariance**: The property that the order of the data points is preserved. If one normalized value is larger than another, it reflects the same order as in the original data.
+
+-   **Non-Preservation of Relative Magnitudes (Global)**: This refers to the loss of the proportionality of the original data values when normalized. If one value is twice as large as another in the original data, this relationship might not be preserved in the normalized data.
+
+-   **Within-Class Relative Magnitude Preservation**: This indicates that within each class or subset of data, the relative magnitudes of the data points are maintained. If data points are normalized within classes, their relative sizes in relation to each other remain the same as in the original data.
